k8s/score-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: score-api
  namespace: tetris
spec:
  selector:
    app: score-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
