k8s/score-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: score-api
  namespace: tetris
  annotations:
    cert-manager.io/cluster-issuer: aks-clusterissuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.<your-domain>
      secretName: score-api-tls
  rules:
    - host: api.<your-domain>
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: score-api
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: score-api
                port:
                  number: 80
